feat: added plugin for easier versioning